--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -180,6 +180,10 @@
 {
     padding-right: 5px;
 }
+.message-wrapper-master{
+    display:flex;
+    flex-direction: row;
+}
 .message-wrapper{
     box-shadow: 6px 6px rgba(0, 0, 0, 0.1);
     display:flex;
@@ -189,6 +193,7 @@
     border-radius: 10px;
     width:40%;
     margin:10px;
+    padding-bottom: 4px;
 }
 
 
@@ -201,9 +206,7 @@
     background-color: rgb(129,96,217);
 
 }
-.message-wrapper.native{
 
-}
 .message-wrapper.foreign{
     margin-left: auto;
     order: 2;
@@ -244,17 +247,29 @@
 .message-properties{
     display:flex;
     flex-direction: row;
-    background-color: rgb(255, 0, 0);
-    height:50px
+}
+.message-property{
+    margin-left: 2px;
+    margin-right:2px;
+    cursor:pointer;
 }
 
-.fa-solid.fa-arrow-pointer.fa-lg{
-    width:20px;
-    height:20px;
+.message-property.message-voting{
+    display:flex;
+    flex-direction: row;
 }
-.message-flairs, .upvote-message, .downvote-message{
-    width:50px;
-    height:50px;
-    background-color: blueviolet;
-    border: 1px solid black;
+
+
+.voting-icons{
+    list-style-type: none;
+
+    padding:0;
+    margin:0;
+}
+.message-vote{
+    cursor:pointer;
+}
+
+#fasdfsad .foo{
+    
 }
