--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -43,7 +43,7 @@
                 </li>
                 
                 <li>
-                    <a href="#"><i class="fa-solid fa-power-off fa-lg"></i></a>
+                    <a id="sign_out" href="/signout"><i class="fa-solid fa-power-off fa-lg"></i></a>
                     
                 </li>
             </ul>
