--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -123,7 +123,10 @@ Chat
                                 class="fa-solid fa-paper-plane fa-lg"></i></button>
                     </form>
                 </div>
-
+        
+            </div>
+            <div id="sort-chat">
+                <p>sort chat</p>
             </div>
         </div>
     </div>
