--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -32,16 +32,6 @@
 }
 
 
-#text-area-wrapper
-{
-    width:100%;
-    padding-top:10px;
-    padding-right:10px;
-    padding-left:10px;
-    padding-bottom: 1px;
-    background-color: rgb(250, 250, 250);
-    box-shadow: 6px 6px rgba(0, 0, 0, 0.1);
-}
 #chatbar
 {   
     border-radius: 5px;
@@ -158,6 +148,7 @@
     flex-direction: row;
     height:100%;
     background-color: white;
+    overflow:hidden
 }
 
 #chat-wrapper
@@ -171,6 +162,18 @@
     margin:20px;
     
 
+}
+
+#text-area-wrapper
+{
+    width:100%;
+    padding-top:10px;
+    padding-right:10px;
+    padding-left:10px;
+    padding-bottom: 1px;
+    background-color: rgb(250, 250, 250);
+    box-shadow: 6px 6px rgba(0, 0, 0, 0.1);
+    bottom:0;
 }
 
 #session-overview-master-wrapper{
