--- a/chat-app/static/css/landingpage.css
+++ b/chat-app/static/css/landingpage.css
@@ -93,7 +93,6 @@ body {
 }
 
 
-
 #loginBox
 {
 height: 500px;
@@ -109,7 +108,6 @@ left: 50%;
 border-radius: 10px;
 padding: 50px 35px;
 background:  rgb(129,96,217);;
-
 visibility:hidden;
 opacity: 0;
 -webkit-transition: all 0.5s ease-in-out;
@@ -121,7 +119,7 @@ transition: all 0.5s ease-in-out;
 }
 #loginbutton
 {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 
 }
 
@@ -131,7 +129,9 @@ transition: all 0.5s ease-in-out;
     transform: translate3d(-50%, -50%, 0); 
     left:50%;
     font-size: 15px;
-
+    margin-bottom: 50px;
+    color: white;
+    cursor: pointer;
 }
 
 *,
@@ -210,42 +210,44 @@ cursor: pointer;
 }
 
 
-
 #registrationBox
 {
-  height: 700px;
-  width: 500px;
+width: 500px;
 box-shadow: 0 0 40px rgba(8,7,16,0.6);
 background-color: rgba(97, 99, 206, 0.13);
 backdrop-filter:blur(30px);
 border: 1px solid rgba(255,255,255,0.1);
 position: absolute;
 transform: translate(-50%,-50%);
-top: 53%;
+top: 55%;
 left: 50%;
 border-radius: 10px;
-padding: 50px 35px;
+padding: 30px 35px 60px;
 background:  rgb(129,96,217);
-
 height: fit-content;
 block-size: fit-content;
-
 visibility:hidden;
-
 opacity: 0;
 -webkit-transition: all 0.5s ease-in-out;
 -moz-transition: all 0.5s ease-in-out;
 -ms-transition: all 0.5s ease-in-out;
 -o-transition: all 0.5s ease-in-out;
 transition: all 0.5s ease-in-out;
-
 min-height: 100px;
-overflow: hidden;
+overflow: visible;
+margin: 20px;
 }
 
 #redirectToLogin
 {
   cursor: pointer;
+  transform: translate3d(-50%, -50%, 0); 
+  left:50%;
   font-size: 15px;
-  color:black;
+  color:white;
+  margin-top: 30px;
+  font-size: 15px;
+  margin-bottom: 40px;
+  position: absolute;
+  width:fit-content;
 }
