--- a/chat-app/static/css/session.css
+++ b/chat-app/static/css/session.css
@@ -15,16 +15,17 @@ body {
     text-align: center;
     background-color:rgb(95, 68, 168);
     color:white;
-    width:430px;
-    height:530px;
+    width:400px;
+    height:450px;
     position:absolute;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    border-radius: 30px;
+    border-radius: 10px;
     border: 2px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     overflow:hidden;
+    margin-top: 60px;
 
 }
 #sessionselector *
@@ -34,16 +35,16 @@ body {
     justify-content: center;
     padding:0;
     
-    
 }
 
 .sessionselectorlist li a{
     width:100%;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
     cursor:pointer;
-    padding:5px
-
-
+    padding:5px;
+    line-height: 30px;
+    margin-right: 40px;
+    margin-left: 40px;
+    margin-top: 5px;
 }
 .sessionselectorlist li:hover{
     cursor:pointer;
@@ -58,11 +59,10 @@ body {
     height:100%;
     text-align: center;
 
-
 }
 .sessionconfig
 {
-
+    margin-top: 50px;
     position: absolute;
     display:flex;
     flex-direction: column;
@@ -71,13 +71,12 @@ body {
     transform: translate(-50%,-50%);
     top:50%;
     left:50%;
-
-
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
+    width: 70%;
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    -ms-transition: all 0.1s ease-in-out;
+    -o-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
 }
 
 
@@ -91,23 +90,53 @@ body {
     position:absolute;
     transform: translate(-50%,-50%);
     left:50%;
-    margin-top: 50px;
-
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
+    margin-top: 60px;
+    margin-bottom: 25px;
+    width:70%;
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    -ms-transition: all 0.1s ease-in-out;
+    -o-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
 }
 
 
 #sessionid
 {
-    border-radius: 10px;
+    border-radius: 8px;
+    height: 50px;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgba(255,255,255,0.07);
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px;
+    border: none;
+}
+::placeholder{
+    color: rgb(206, 206, 206, 0.7);
 }
 #submitsession
 {
-    border-radius: 20px;
+    margin-top: 20px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 8px;
+    cursor: pointer;
+    border: none;
 }
 
-
+#sessionidgenerator{
+    color: white;
+    font-weight: 500;
+    font-size: 12px;
+    padding-top: 40px;
+}
+#sessionidgenerator:hover{
+    color: rgb(206, 206, 206, 0.7);
+}
