--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -39,11 +39,11 @@
                     <a id="profile-button" class="active" href="/profile"><i class="fa-regular fa-user fa-lg"></i></a>
                 </li>
                 <li>
-                    <a id = "manage-sessions" href="/session"><i class="fa-solid fa-phone fa-lg"></i></a>
+                    <a id = "manage-sessions" href="/session"><i class="fa-solid fa-comments fa-lg"></i></a>
                 </li>
                 
                 <li>
-                    <a href="#"><i class="fa-solid fa-power-off fa-lg"></i></a>
+                    <a href="/landingpage"><i class="fa-solid fa-power-off fa-lg"></i></a>
                     
                 </li>
             </ul>
@@ -59,9 +59,6 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                    </button>
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
                     </button>
     
                 </div>
