--- a/chat-app/templates/session.html
+++ b/chat-app/templates/session.html
@@ -26,8 +26,8 @@ Session
     })
     function ActivateJoinSession()
     {   
-        createsessionbutton.css("color", "white")
-        joinsessionbutton.css("color", "rgb(206,206,206)");
+        createsessionbutton.css("color", "rgb(206,206,206,0.5)")
+        joinsessionbutton.css("color", "white");
 
         createsession.css({"opacity" : 0});
         joinsession.css({"opacity" : 1});  
@@ -40,9 +40,8 @@ Session
     }
     function ActivateCreateNewSession()
     {
-
-        createsessionbutton.css("color", "rgb(206,206,206)")
-        joinsessionbutton.css("color", "white");
+        createsessionbutton.css("color", "white")
+        joinsessionbutton.css("color", "rgb(206,206,206,0.5)");
 
         joinsession.css({"opacity" : 0});
         createsession.css({"opacity" : 1});
@@ -57,13 +56,14 @@ Session
 <div id="sessionbox">
     <div id ="sessionselector" >
         <ul class="sessionselectorlist" >
-            <li style="border-right: 1px solid rgba(0, 0, 0, 0.1)">
+        </li>
+        <li style="border-right: 1px solid rgba(0, 0, 0, 0.05)">
+            <a class="sessionselection" id="createsessionselection" onclick="ActivateCreateNewSession()">Create Session</a>
+        
+        </li> 
+            <li style="border-left: 1px solid rgba(0, 0, 0, 0.05)">
                 <a id="joinsessionselection" class="sessionselection" onclick="ActivateJoinSession()">Join Session</a>
-                
-            </li>
-            <li style="border-left: 1px solid rgba(0, 0, 0, 0.1)">
-                <a class="sessionselection" id="createsessionselection" onclick="ActivateCreateNewSession()">Create Session</a>
-            </li> 
+        
         </ul>
     </div>
 
@@ -78,7 +78,7 @@ Session
 
 
         <form action="/session" method = "post" class="sessionconfig">
-            <label>Enter Session ID:</label>
+            <label>Enter a Session ID:</label>
             <input id="sessionid" type="text" placeholder="Session ID" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room" maxlength="10">
             <script>
                 function GenerateSessionID() {
@@ -93,7 +93,7 @@ Session
                     $('#sessionid').val(result);
                 }
             </script>
-            <strong><a id="sessionidgenerator" onclick = "GenerateSessionID()" style="cursor:pointer; font-size:15px; visibility: hidden;">Generate one for me</a></strong>
+            <strong><a id="sessionidgenerator" onclick = "GenerateSessionID()" style="cursor:pointer; visibility: hidden;">Generate Random ID</a></strong>
            
             <button id="submitsession" type="submit">Submit</button>
 
