complete refactor of JustAskHTTP Server

--- a/chat-app/templates/profile.html
+++ b/chat-app/templates/profile.html
@@ -31,19 +31,19 @@ Profile
                     <ul class="form-elements" id="edit-profile-wrapper">
                         <li class = "profile-information">    
                             <p>First Name: </p>
-                            <input name="firstname" type="text" placeholder="{{firstname}}">
+                            <input name="FIRSTNAME" type="text" placeholder="{{FIRSTNAME}}">
                         </li>
                         <li class = "information profile-information">    
                             <p>Last Name: </p>
-                            <input name="lastname" type="text" placeholder="{{lastname}}">
+                            <input name="LASTNAME" type="text" placeholder="{{LASTNAME}}">
                         </li>
                         <li class = "information profile-information">    
                             <p>Username: </p>
-                            <input name="username" type="text" placeholder="{{username}}">
+                            <input name="USERNAME" type="text" placeholder="{{USERNAME}}">
                         </li>
                         <li class = "information profile-information">    
                             <p>Email Address: </p>
-                            <input name="email" type="text" placeholder="{{email}}">
+                            <input name="EMAIL" type="text" placeholder="{{EMAIL}}">
                         </li>
                     </ul>
                     <button name="submit-profile" id="submit-profile" class="submit">Submit</button>
