--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -7,15 +7,6 @@
     overflow-y:auto;
     width:100%;
 }
-#session-id
-{
-    height:30px;
-    text-align: left;
-    padding:0;
-    margin:0;
-
-}
-
 
 
 #messages
@@ -27,8 +18,13 @@
     display:flex;
     flex-direction: column;
     background-color: rgb(250, 250, 250);
-    box-shadow: 6px 6px rgba(0, 0, 0, 0.1);
+    align-items: center;
+}
 
+.acknowledge{
+    color:rgb(129,96,217);
+    font-size: 12px;
+    padding-top: 5px;
 }
 
 
@@ -62,51 +58,57 @@
 .message-wrapper-master{
     display:flex;
     flex-direction: row;
+    width: 100%;
+    justify-content: center;
 }
 .message-wrapper{
-    box-shadow: 6px 6px rgba(0, 0, 0, 0.1);
     display:flex;
     flex-direction: column;
-    background-color: white;
-    padding:10px;
-    border-radius: 10px;
-    width:40%;
+    color: rgb(255, 255, 255);
+    background-color: rgb(129,96,217,0.6);
+    padding:20px;
+    border-radius: 5px;
+    width:90%;
     margin:10px;
-    padding-bottom: 4px;
+    padding-bottom: 20px;
 }
-
+.message-wrapper.foreign{
+    color: rgb(129,96,217);
+    background-color: rgb(129,96,217,0.2);
+}
 
 .message-wrapper.native .message-payload{
-    background-color: rgb(95, 68, 168);
-
-
+    background-color: rgb(255, 255, 255, 0.9);
+    color: rgb(95, 68, 168);
 }
+
 .message-wrapper.foreign .message-payload{
-    background-color: rgb(129,96,217);
-
+    background-color: rgb(255, 255, 255, 0.9);
+    color: rgb(95, 68, 168);
 }
 
-.message-wrapper.foreign{
-    margin-left: auto;
-    order: 2;
-}
+
 .message-wrapper p{
-
     padding:0;
     margin:0;
     padding-right:3px;
+    overflow-wrap: break-word;
+    overflow: auto;
+    max-height: 200px;
 }
 .message-header{
     background-color: transparent;
     font-size:10px;
+    margin-bottom: 5px;
 
 }
 .message-payload{
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.01);
     border-radius: 5px;
-    font-size:15px;
+    font-size:12px;
     width:100%;
-    padding:5px;
+    padding:10px;
+    min-height: 30px;
 }
 
 
@@ -122,25 +124,23 @@
 
 .message-property.message-voting{
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+    justify-content: flex-start;
+    color:rgb(95, 68, 168);
 }
 
 
 .voting-icons{
     list-style-type: none;
-
     padding:0;
-    margin:0;
 }
 .message-vote{
     cursor:pointer;
+    margin:0px;
+    padding: 0px;
 }
-
-
-#sort-chat{
-    cursor:pointer;
-}
-
 
 #media-wrapper
 {
@@ -159,9 +159,8 @@
     display:flex;
     flex-direction: column;
     padding: 20px;
+    padding-top: 0px;
     margin:20px;
-    
-
 }
 
 #text-area-wrapper
@@ -170,30 +169,95 @@
     padding-top:10px;
     padding-right:10px;
     padding-left:10px;
-    padding-bottom: 1px;
+    padding-bottom: 20px;
     background-color: rgb(250, 250, 250);
-    box-shadow: 6px 6px rgba(0, 0, 0, 0.1);
     bottom:0;
 }
 
 #session-overview-master-wrapper{
-    background-color: red;
+    background-color: rgb(129,96,217,0.6);
     height:100%;
-    width:15%;
-    
+    width:20%;
 }
 #session-overview-wrapper{
     display:flex;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
     list-style-type: none;
-    padding:10px;
     margin:0;
     height:100%;
     width:100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    justify-content: space-between;
 }
 
-.session-overview{
-    padding-top: 5px;
-    background-color: blue;
-    border: 1px black solid;
+#session-id{
+    height:30px;
+    padding:5px;
+    margin-top:5px;
+    font-weight: 600;
+    color: white;
+}
+
+#session-ID-wrapper{
+    border-bottom: 2px solid rgb(256,256,256,0.5);
+}
+
+#sort-chat{
+    margin-bottom: 10px;
+    cursor: pointer;
+    background-color: rgb(129,96,217,0.6);
+    color: white;
+    border-radius: 20px;
+    font-size: 14px;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    width: 100px;
+}
+
+
+#leave-session-wrapper{
+    bottom: 0px;
+    width:100%;
+    text-align: center;
+    margin-bottom: 15px;
+}
+#leave-session{
+    background-color: rgb(95, 68, 168);
+    color: white;
+    border-radius: 5px;
+    font-size: 14px;
+    padding: 10px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    align-self: center;
+    width: 80%;
+    vertical-align: bottom;
+
+}
+
+#leave-session:hover {
+    background: rgb(95, 68, 168,0.8);
+}
+
+#session-clients-wrapper{
+    height: 350px;
+    background: rgb(256, 256, 256,0.1);
+    width: 80%;
+    border-radius: 3px;
+    padding: 10px;
+    margin-bottom: 30px;
+}
+
+#session-clients{
+    color:rgb(95, 68, 168);
+    font-size: 10px;
+}
+#session-clients-wrapper h3{
+    font-size: 18px;
+    color: rgb(95, 68, 168);
 }
