Revert "Merge branch 'backend-refactor-jas' into front-end-refactor-jas"
This reverts commit 27e572a8e8dd705a137dabdc8f9ec9351ca4a1ba, reversing
changes made to 99de045cb5691b469bfcbe0615627ce63e42776b.

--- a/chat-app/templates/landingpage.html
+++ b/chat-app/templates/landingpage.html
@@ -2,9 +2,6 @@
 
 <head>
   <link rel="stylesheet" href="../static/css/landingpage.css">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/191b087c0a.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <title>justask</title>
 </head>
@@ -28,12 +25,9 @@
           <label for="username">Email</label>
           <input name = "email" type="text" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder ='Email'" id="username" required>
 
-          <label for="password" style="display:inline;">Password</label>
-
-          <i id="view_login_password" class="fa-solid fa-eye-low-vision fa-2xs" style="cursor:pointer;"></i>
+          <label for="password">Password</label>
           <input name = "password" type="password" placeholder="********" id="password" onfocus="this.placeholder = ''" onblur="this.placeholder ='********'" required>
-          
-          
+
           <button id="loginbutton">Log In</button>
 
       </form>
@@ -55,10 +49,8 @@
         <label for="email">Email</label>
         <input name = "email" type="text" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder ='Email'" id="email" required>
         
-        <label for="password" style="display:inline;">Password</label>
-        <i id="view_registration_password" class="fa-solid fa-eye-low-vision fa-2xs" style="cursor:pointer;"></i>
-
-        <input name = "password" type="password" placeholder="********" id="reg_password" onfocus="this.placeholder = ''" onblur="this.placeholder ='********'" required>
+        <label for="password">Password</label>
+        <input name = "password" type="password" placeholder="********" id="password" onfocus="this.placeholder = ''" onblur="this.placeholder ='********'" required>
         
         <button>Submit</button>
       </form>
