--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -65,12 +65,15 @@
                     <a id="sketchpad" href="/sketchpad"><i class="fa-solid fa-paintbrush fa-lg"></i></a>
                     <label class="sidebar-label ">Sketchpad</label>
                 </li>
-
+                <li class="sidebar-element">
+                    <a id="mcq" href="/mcq"><i class="fa-solid fa-circle-question"></i></i></a>
+                    <label class="sidebar-label">MCQ</label>
+                </li> 
                 <li class="sidebar-element">
                     <a id="sign_out" href="/signout"><i class="fa-solid fa-power-off fa-lg"></i></a>
                     <label class="sidebar-label">Signout</label>
-
                 </li>
+                
             </ul>
 
         </nav>
