--- a/chat-app/static/css/hubbase.css
+++ b/chat-app/static/css/hubbase.css
@@ -9,47 +9,123 @@
     margin-bottom:3px;
 }
 
-
-#content-name-strip
+#content-name
 {
     width:100%;
-    margin-left:2px;
-    margin-top:2px;
+    background-color:rgb(95, 68, 168);
     padding:8px 16px;
-    font-size:20px;
-    color:white;
+    padding-bottom: 0px;
+    font-size: 15px;
+    color:#fff;
+    height: 45px;
 
 }
 
+#content-wrapper {
+    width: 100%;
+    padding: 10px;
+    display:flex;
+    flex-direction: column;
+    padding-left:5px;
+    padding-top:0px;
+}
+#content{
+    width:100%;
+    height:100%;
+    box-shadow: 2px 1px 10px 1px #888888;
+    overflow:auto;
+}
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    perspective: 1500px;
+}
 
 
 #sidebar {
     min-width: 50px;
-    /* max-width: 50px; */
-    height:100;
-    /* offset-x | offset-y | blur-radius | spread-radius | color */
-    /* box-shadow: 2px 0px 2px 1px rgba(0, 0, 0, 0.2); */
-    margin-right:3px;
-
-
-}
-
-.sidebar-contents{
-    padding:5px;
-}
-
-.sidebar{
-    padding:5px;
-}
-
-.sidebar-element{
+    max-width: 50px;
+    background: rgb(95, 68, 168);
+    color: #fff;
+    transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+    transform-origin: bottom left;
     text-align: center;
-    padding:5px;
-}
-.sidebar-element a{
-    display:block;
+    margin-right:3px;
 }
 
+#sidebar.active {
+    margin-left: -25px;
+    transform: rotateY(100deg);
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #6d7fcc;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+    color: rgb(255, 255, 255);
+}
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article, a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
 
 
 html,body, .wrapper{
@@ -88,30 +164,7 @@ html,body, .wrapper{
 .element-flash :hover{
     color:rgb(95, 68, 168);
 }
-.element-flash.background :hover{
-    
-}
-.sidebar-label{
-    font-size:15px;
-}
 
-
-
-
-.wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-    perspective: 1500px;
-}
-
-
-
-#sidebar ul li a {
-    font-size: 1.1em;
-    display: block;
-    color: #7386D5;
-}
 
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
@@ -120,22 +173,3 @@ html,body, .wrapper{
 }
 
 
-
-
-
-#content-wrapper {
-    width: 100%;
-    padding: 20px;
-
-
-    display:flex;
-    flex-direction: column;
-    padding-left:0px;
-    padding-top:0px;
-}
-#content{
-    width:100%;
-    height:100%;
-    box-shadow: 10px 10px 8px #888888;
-    overflow:auto;
-}
