--- a/chat-app/static/css/mcq.css
+++ b/chat-app/static/css/mcq.css
@@ -11,7 +11,7 @@
     width:400px;
     background:#fff; 
     border-radius:10px;
-    box-shadow: Opx Opx 20px 5px rgba(35, 3)
+    box-shadow: Opx Opx 20px 5px rgba(35, 3);
 }
 .poll .question {
     padding:20px;
