--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -56,7 +56,7 @@
                     <a id="profile-button" class="active" href="/profile"><i class="fa-regular fa-user fa-lg"></i></a>
                 </li>
                 <li>
-                    <a id = "manage-sessions" href="/MCQ"><i class="fa-solid fa-comments fa-lg"></i></a>
+                    <a id = "manage-sessions" href="/session"><i class="fa-solid fa-comments fa-lg"></i></a>
                 </li>
                 <li>
                     <a id = "mcq" href="/session"><i class="fa-solid fa-circle-question fa-lg"></i></a>
