--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -59,7 +59,7 @@
                     <a id = "manage-sessions" href="/session"><i class="fa-solid fa-comments fa-lg"></i></a>
                 </li>
                 <li>
-                    <a id = "mcq" href="/session"><i class="fa-solid fa-circle-question fa-lg"></i></a>
+                    <a id = "mcq" href="/mcq"><i class="fa-solid fa-circle-question fa-lg"></i></a>
                 </li>
                 <li>
                     <a id="sketchpad" href="/sketchpad"><i class="fa-solid fa-paintbrush fa-lg"></i></a>
