--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -36,9 +36,12 @@ Chat
 <div id="media-wrapper">
 
     <div id="chat-wrapper">
-
-        <div id="sort-chat">
-            <div>sort by <i class="fa-solid fa-sort"></i>
+        <div id="sorting">
+            <div id="sort-chat">sort by <i class="fa-solid fa-sort"></i>
+            </div>
+            <div class="sorters">
+                <a id="popularity">Most Popular</a>
+                <a id="newest">Most Recent</a>
             </div>
         </div>
 
