--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -88,7 +88,7 @@ Chat
                 </div>
 
                 <div id="leave-session-wrapper">
-                    <a id="leave-session" href="/session">Leave Session</a>
+                    <a id="leave-session" href="/profile">Leave Session</a>
                 </div>
             </div>
 
