--- a/chat-app/static/css/profile.css
+++ b/chat-app/static/css/profile.css
@@ -3,59 +3,112 @@
     flex-direction: row;
     width:100%;
     height:100%;
+    object-fit: contain;
 }
 #profile-picture-master-wrapper{
     width:30%;
-    background-color:red;
+    background-color:rgb(250,250,250);
     display:flex;
     flex-direction: column;
     padding:10px;
+    height:100%;
     
 }
+
 #profile-picture-child-wrapper{
     height:100%;
+    overflow-y:scroll;
 }
 #profile-socials-wrapper{
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     width:100%;
-    height:50px;
+
 }
 
-#profile-settings-master-wrapper{
-    width:100%;
-    background-color: blue;
+.settings-bar{
+    border-radius: 30px;
+    background:rgb(129,96,217);
 }
 
 
+#social-icon{
+    max-height: 100%;
+    max-width: 100%;
+    width:30px;
+}
 #profile-picture-wrapper{
     width: 100%;
     height:400px;
-    background-color:rgb(179, 255, 0);
+    overflow:hidden;
+    border-radius: 30px;
+    margin-bottom: 20px;
+    padding:40px;
 }
 
-#profile-picture-about-me-wrapper{
+
+.icon{
+
+    max-width:100%;
+    max-height:100%;
+}
+
+
+#about-me-wrapper{
     width:100%;
     height:100%;
-    background-color: aqua;
 }
+
+#profile-picture-about-me-wrapper {
+    /* background-color: aqua; */
+    width:100%;
+    height:100%;
+    padding:30px;
+
+}
+
 
 #profile-socials{
     list-style-type: none;
     display:flex;
     flex-direction: row;
+    justify-content: center;
+    padding:5px;
+
 }
 #profile-socials li{
-    padding-right:10px;
+    padding-right:30px;
 }
+
+.about-me{
+    background-color: rgb(250,250,250);
+    width:100%;
+    margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #profile-settings-master-wrapper{
+    width:100%;
+    background-color: rgb(250,250,250);
 }
-
 
 #profile-settings-wrapper{
     width:75%;
-    height:75%;
-    background-color: green;
+
+    background-color: rgb(129,96,217);
     position:relative;
     top:50%;
     left:50%;
@@ -82,7 +135,8 @@
 }
 #content
 {
-    overflow:hidden;
+    overflow:scroll;
+    height:100%;
 }
 
 
@@ -117,11 +171,14 @@
     width:100%;
 }
 .profile-information{
-    color:white;
+    color:rgb(250,250,250)
 }
 .setting{
     padding:10px;
     cursor:pointer;
+}
+.setting *{
+    display:inline;
 }
 /* form{
     position:absolute;
@@ -133,16 +190,7 @@
     -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
 
-
-
-    /* TO DO -- CENTER THIS!!*/ 
-
-    
-    /* left:50%;
-    transform:translate(-50%,0) */
-    
-
-} */
+}  */
 
 
 .form-elements{
